// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as submit 1`] = `
<button
  className="cf-yp66z7"
  disabled={undefined}
  onClick={[Function]}
  type="submit"
>
  Button
</button>
`;

exports[`should render with loading 1`] = `
<button
  className="cf-uydyf0"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading and disabled overridden 1`] = `
<button
  className="cf-uydyf0"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type 1`] = `
<button
  className="cf-yp66z7"
  disabled={undefined}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type/disabled 1`] = `
<button
  className="cf-1903je5"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;
